# catkin_ws_fetch33

./: README.md
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/.private/access_local_microphone/: .catkin  .rosinstall  setup.sh
devel/.private/acoustic_magic_msgs/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/.private/acoustic_magic_uart/: .catkin  .rosinstall  setup.sh
devel/.private/acoustic_track/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/central_contrl/: .catkin  (+3 more)
logs/access_local_microphone/: build.check.012.log.stderr  build.check.013.log.stderr  build.make.013.log.stderr
logs/acoustic_magic/: build.cmake.000.log.stderr
logs/acoustic_magic_uart/: build.cmake.000.log.stderr  build.cmake.003.log.stderr  build.cmake.004.log.stderr
logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
logs/central_contrl/: build.cmake.000.log.stderr
logs/central_control/: build.check.003.log.stderr
logs/gcloud_speech_utils/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
src/: acoustic_magic_msgs  gcloud_speech_msgs
src/access_local_microphone/: CMakeLists.txt  package.xml
src/access_local_microphone/src/: acoustic_magic_uart_node.cc  cogrob  third_party  util
src/acoustic_track/: CMakeLists.txt  setup.py
src/central_control/: CMakeLists.txt  package.xml  setup.py
src/grip_source/: CMakeLists.txt
src/move_arm_to_source/: CMakeLists.txt  package.xml  setup.py
src/turn_to_sound_source/: CMakeLists.txt
(+216 files in other folders)
